analyzer/tests/snapshots/errors__case_63.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---
error: literal out of range for `u64`
  ┌─ tests/fixtures/errors/numeric_capacity_mismatch/u64_neg.fe:3:20
  │
3 │         return u64(-1)
  │                    ^^ does not fit into type `u64`


